# hypergraph_scattering

./: .gitignore  .gitmodules  README.md  pyproject.toml
experiments/: HSBM_functions.py  cooking200.py  gen_dataset.py  graph_classification.py  pred_curvature.py  pred_degree.py  pred_edge_degree.py  pred_vertex_degree.py  spacegm_general.py  synthetic_hypergraph.py
hypergraph_scattering/data/: spacegm_utils.py
hypergraph_scattering/models/: dhg_scattering.py  hyper_scattering.py  hyper_scattering_net.py
hypergraph_scattering/utils/: config.yaml  data_loader.py
hypg_scattering/data/: gen_matricies.py  hypergraph_incidence_matrix.py  spacegm.py  spacegm_transforms.py
hypg_scattering/models/: hyper_scattering_net.py
hypgs/data/: sea_ad_mtg_scrna.ipynb  spacegm.py  spacegm_transforms.py
hypgs/models/: hsn_pyg.py  hyper_scattering_net.py  test_hsn.py  test_hsn_pyg.py  test_hsn_pyg_vs_dhg.py
hypgs/utils/: data.py  graph_build.py  hyperedge_aggregator.py  hypergraph_utils.py  plot.py  test_data.py  test_he_aggr.ipynb  test_w2.ipynb  w2.py
notebooks/: A23_AE_embedding.ipynb  A23_AE_embedding_recon_only_visualize.ipynb  A23_AE_embedding_visualize.ipynb  generate_spatial_feat.ipynb  graph_classification_results.ipynb  hyperedge_embedding_interp.ipynb  hyperedge_unsupervised.py  merfish_dirac_voronoi.ipynb  merfish_diracs.ipynb  preprocess_data_A23_gentle_preprocess.ipynb  tudataset.ipynb  visualize_data.ipynb
